benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_Mul_Add_iter6_error.log
=== Verification Error - Iteration 6 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_Mul_Add.rs
Time: 2025-09-15 20:18:12

Full Error Output:
--------------------------------------------------------------------------------
VERIFICATION BYPASSES DETECTED: uses 'assume' to bypass verification. Code contains verification bypasses and cannot be considered successfully verified.

Original verification output:
Compilation failed: error[E0277]: can't compare `{integer}` with `vstd::prelude::nat`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_Add_impl.rs:93:13
   |
93 |   while pos < s2@.len()
   |             ^ no implementation for `{integer} < vstd::prelude::nat` and `{integer} > vstd::prelude::nat`
   |
   = help: the trait `std::cmp::PartialOrd<vstd::prelude::nat>` is not implemented for `{integer}`
   = help: the following other types implement trait `std::cmp::PartialOrd<Rhs>`:
             f128
             f16
             f32
             f64
             i128
             i16
             i32
             i64
           and 8 others

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_Add_impl.rs:98:33
   |
98 |     let bit_index = s2@.len() - 1 - pos;
   |                     ---------   ^ expected `nat`, found integer
   |                     |
   |                     expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_Add_impl.rs:98:37
   |
98 |     let bit_index = s2@.len() - 1 - pos;
   |                     -------------   ^^^ expected `nat`, found integer
   |                     |
   |                     expected because this is `vstd::prelude::nat`

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_Add_impl.rs:99:11
   |
99 |     if s2@[bit_index] == '1' {
   |           ^^^^^^^^^^^

error[E0599]: no method named `to_vec` found for struct `vstd::seq::Seq` in the current scope
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_Add_impl.rs:100:24
    |
100 |       let s1_vec = s1@.to_vec();
    |                    --  ^^^^^^
    |                    |
    |                    method `to_vec` is available on `&[char]`
    |
help: there is a method `to_set` with a similar name
    |
100 -       let s1_vec = s1@.to_vec();
100 +       let s1_vec = s1@.to_set();
    |

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0277, E0308, E0599, E0608.
For more information about an error, try `rustc --explain E0277`.

--------------------------------------------------------------------------------

Additional Output:
error[E0277]: can't compare `{integer}` with `vstd::prelude::nat`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_Add_impl.rs:93:13
   |
93 |   while pos < s2@.len()
   |             ^ no implementation for `{integer} < vstd::prelude::nat` and `{integer} > vstd::prelude::nat`
   |
   = help: the trait `std::cmp::PartialOrd<vstd::prelude::nat>` is not implemented for `{integer}`
   = help: the following other types implement trait `std::cmp::PartialOrd<Rhs>`:
             f128
             f16
             f32
             f64
             i128
             i16
             i32
             i64
           and 8 others

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_Add_impl.rs:98:33
   |
98 |     let bit_index = s2@.len() - 1 - pos;
   |                     ---------   ^ expected `nat`, found integer
   |                     |
   |                     expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_Add_impl.rs:98:37
   |
98 |     let bit_index = s2@.len() - 1 - pos;
   |                     -------------   ^^^ expected `nat`, found integer
   |                     |
   |                     expected because this is `vstd::prelude::nat`

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_Add_impl.rs:99:11
   |
99 |     if s2@[bit_index] == '1' {
   |           ^^^^^^^^^^^

error[E0599]: no method named `to_vec` found for struct `vstd::seq::Seq` in the current scope
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_Add_impl.rs:100:24
    |
100 |       let s1_vec = s1@.to_vec();
    |                    --  ^^^^^^
    |                    |
    |                    method `to_vec` is available on `&[char]`
    |
help: there is a method `to_set` with a similar name
    |
100 -       let s1_vec = s1@.to_vec();
100 +       let s1_vec = s1@.to_set();
    |

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0277, E0308, E0599, E0608.
For more information about an error, try `rustc --explain E0277`.
